--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                         <div class="text-body-1 dot-before indicators-title">Projects Delivered</div>
                                         <div class="wg-counter style-1">
                                             <div class="flex align-items-center justify-content-end">
-                                                <div class="odometer text-display-2" data-number="15">30</div>
+                                                <div class="odometer text-display-2" data-number="15">3s\0</div>
                                                 <span class="sub-odo text-display-2">+</span>
                                             </div>
                                         </div>
