--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@
                                 </h2>
                                 <div class="experiences-wrap">
                                     <div class="item scrolling-effect effectLeft">
-                                        <div class="sub-heading text">EmaanSoftTech Solutions</div>
+                                        <div class="sub-heading text">Freelance</div>
                                         <div class="job-title">
-                                            <h6 class="title">WordPress Developer</h6>
-                                            <div class="text-body-2 time-line type-tags">2025 - Present</div>
+                                            <h6 class="title">full-Stack WordPress Developer</h6>
+                                            <div class="text-body-2 time-line type-tags">FEB 2025 - Present</div>
                                         </div>
                                     </div>
                                     <div class="item scrolling-effect effectLeft">
