--- a/index.html
+++ b/index.html
@@ -347,22 +347,22 @@
                                     <div class="item scrolling-effect effectLeft">
                                         <div class="sub-heading text">Freelance</div>
                                         <div class="job-title">
-                                            <h6 class="title">full-Stack WordPress Developer</h6>
+                                            <h6 class="title">Full-Stack WordPress Developer</h6>
                                             <div class="text-body-2 time-line type-tags">FEB 2025 - Present</div>
                                         </div>
                                     </div>
                                     <div class="item scrolling-effect effectLeft">
-                                        <div class="sub-heading text">Freelance (Freelancer)</div>
+                                        <div class="sub-heading text">WordPress Developer</div>
                                         <div class="job-title">
-                                            <h6 class="title">Shopify E-commerce Specialist</h6>
-                                            <div class="text-body-2 time-line type-tags">2025-Present</div>
+                                            <h6 class="title">raptr41</h6>
+                                            <div class="text-body-2 time-line type-tags">OCT 2024-JAN 2025</div>
                                         </div>
                                     </div>
                                     <div class="item scrolling-effect effectLeft">
-                                        <div class="sub-heading text">raptr42</div>
+                                        <div class="sub-heading text">CodePro</div>
                                         <div class="job-title">
-                                            <h6 class="title">Video Production & Web Developer</h6>
-                                            <div class="text-body-2 time-line type-tags">2023-2024</div>
+                                            <h6 class="title">WordPress</h6>
+                                            <div class="text-body-2 time-line type-tags">AUG 2024 - SEP 2024</div>
                                         </div>
                                     </div>
 
