--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                     <div class="item scrolling-effect effectLeft">
                                         <div class="sub-heading text">CodePro</div>
                                         <div class="job-title">
-                                            <h6 class="title">WordPress</h6>
+                                            <h6 class="title">WordPress Intern</h6>
                                             <div class="text-body-2 time-line type-tags">AUG 2024 - SEP 2024</div>
                                         </div>
                                     </div>
