--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
                             </div>
                             <div class="indicators">
                                 <ul class="list-tags">
+                                    <li><a class="text-body-2 wow fadeInUp" href="#">Full-Stack WordPress</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" href="#">WordPress Expert</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.1s" href="#">Shopify Specialist</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.2s" href="#">Video Production</a></li>
