--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             <div class="indicators">
                                 <ul class="list-tags">
                                     <li><a class="text-body-2 wow fadeInUp" href="#">Full-Stack WordPress</a></li>
-                                    <li><a class="text-body-2 wow fadeInUp" href="#">WordPress Expert</a></li>
+                                    <li><a class="text-body-2 wow fadeInUp" href="#">WordPress Specialist</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.1s" href="#">Shopify Specialist</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.2s" href="#">Video Production</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" href="#">E-commerce Solutions</a></li>
