--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                     <li><a class="text-body-2 wow fadeInUp" href="#">Full-Stack WordPress</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" href="#">WordPress Specialist</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.1s" href="#">Shopify Specialist</a></li>
-                                    <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.2s" href="#">Video Production</a></li>
+                                    <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.2s" href="#">Mobile App Prmo Videos</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" href="#">E-commerce Solutions</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" href="#">Promo Videos</a></li>
                                 </ul>
