--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
                                 <ul class="list-tags">
                                     <li><a class="text-body-2 wow fadeInUp" href="#">Full-Stack WordPress</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" href="#">Promo Videos</a></li>
-                                    <li><a class="text-body-2 wow fadeInUp" href="#">WordPress Specialist</a></li>
+                                    <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.1s" href="#">WordPress Specialist</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.1s" href="#">Shopify Specialist</a></li>
                                     <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.2s" href="#">Mobile App Prmo Videos</a></li>
-                                    <li><a class="text-body-2 wow fadeInUp" href="#">E-commerce Solutions</a></li>
+                                    <li><a class="text-body-2 wow fadeInUp" data-wow-delay="0.1s" href="#">E-commerce Solutions</a></li>
                                 </ul>
                                 <div class="indicators-wrap">
                                     <div class="indicators-item wow fadeInUp">
