--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <!--[if IE ]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
-    <title>Deepak Kumar - Portfolio HTML Template</title>
+    <title>Deepak Kumar </title>
     <meta name="description" content="Deepak Kumar">
 
     <meta name="keywords" content="">
