--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <a href="https://www.instagram.com/deepaklohana1/"><i class="icon icon-instagram"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/profile.php?id=100090990153935"><i class="icon icon-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100090990153935"><i class="fa-brands fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
