--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
                             <a href="https://x.com/DeepakK86449533"><i class="icon icon-twitter-x"></i></a>
                         </li>
                         <li>
-                            <a href="https://dribbble.com/deepaklohana41"><i class="icon icon-dribbble"></i></a>
+                            <a href="https://www.linkedin.com/in/deepaklohana41/"><i class="icon icon-linkedin"></i></a>
                         </li>
                         <li>
                             <a href="https://www.instagram.com/deepaklohana1/"><i class="icon icon-instagram"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/profile.php?id=100090990153935"><i class="icon icon-github"></i></a>
+                            <a href="https://github.com/deepaklohana"><i class="icon icon-github"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -268,13 +268,13 @@
                     <a href="https://x.com/DeepakK86449533"><i class="icon icon-twitter-x"></i></a>
                 </li>
                 <li>
-                    <a href="https://dribbble.com/deepaklohana41"><i class="icon icon-dribbble"></i></a>
+                    <a href="https://www.linkedin.com/in/deepaklohana41/"><i class="icon icon-linkedin"></i></a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/deepaklohana1/"><i class="icon icon-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100090990153935"><i class="icon icon-facebook-f"></i></a>
+                    <a href="https://github.com/deepaklohana"><i class="icon icon-github"></i></a>
                 </li>
             </ul>
             <a href="#contact" class="bot-button">
