--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/deepaklohana41/" target="_blank" rel="noopener noreferrer">
-        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17.5ff" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17.5" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .526 16 1.175v13.65c0 .662-.526 1.175-1.175 1.175H1.175C.526 16 0 15.474 0 14.825V1.175zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.21c.837 0 1.358-.554 1.358-1.248 0-.71-.521-1.248-1.32-1.248-.8 0-1.358.538-1.358 1.248 0 .694.521 1.248 1.32 1.248zm4.908 8.21V9.359c0-.203.014-.406.073-.55.161-.406.528-.826 1.144-.826.806 0 1.127.623 1.127 1.536v3.875h2.401V9.25c0-2.22-1.184-3.25-2.764-3.25-1.273 0-1.845.694-2.165 1.184h.028v-1.016H6.542c.028.662 0 7.225 0 7.225h2.401z"/>
         </svg>
     </a>
