--- a/index.html
+++ b/index.html
@@ -403,51 +403,52 @@
                                     </div>
                                 </div>
                                 <div class="works-wrap">
+                                    
                                     <div class="works-item scrolling-effect effectLeft">
-                                        <a class="image" href="asset/images/section/KingsMart.png" data-lightbox="example-1">
-                                            <img class="lazyload" src="asset/images/section/works-1.jpg" data-src="asset/images/section/KingsMart.png" alt="">
+                                        <a class="image" href="asset/images/section/panagigs.png" data-lightbox="example-1">
+                                            <img class="lazyload" src="asset/images/section/works-2.jpg" data-src="asset/images/section/panagigs.png" alt="">
                                         </a>
                                         <div class="content">
                                             <div class="infor">
-                                                <div class="sub-heading sub">E-Commerce</div>
+                                                <div class="sub-heading sub">Agency Website</div>
                                                 <h3 class="title">
-                                                    <a href="https://kingsmart.pk/">KingsMart.PK</a>
+                                                    <a href="https://ecompakistan.com/">PanaGigs</a>
                                                 </h3>
-                                                <a href="https://kingsmart.pk/" class="link date text-body-2 type-tags">May 2025</a>
+                                                <a href="https://panagigs.com/" class="link date text-body-2 type-tags">Aug 2025</a>
                                             </div>
-                                            <a href="https://kingsmart.pk/" class="btn-links">
+                                            <a href="https://panagigs.com/" class="btn-links">
                                                 <i class="icon icon-arrow-top-right"></i>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="works-item scrolling-effect effectLeft">
-                                        <a class="image" href="asset/images/section/ecompakistan.png" data-lightbox="example-1">
-                                            <img class="lazyload" src="asset/images/section/works-2.jpg" data-src="asset/images/section/ecompakistan.png" alt="">
+                                        <a class="image" href="asset/images/section/the bio great.png" data-lightbox="example-1">
+                                            <img class="lazyload" src="asset/images/section/works-1.jpg" data-src="asset/images/section/the bio great.png" alt="">
                                         </a>
                                         <div class="content">
                                             <div class="infor">
                                                 <div class="sub-heading sub">E-Commerce</div>
                                                 <h3 class="title">
-                                                    <a href="https://ecompakistan.com/">Ecom Pakistan</a>
+                                                    <a href="https://thebiogeart.com">The Bio Great</a>
                                                 </h3>
-                                                <a href="https://ecompakistan.com/" class="link date text-body-2 type-tags">May 2025</a>
+                                                <a href="https://thebiogreart.com" class="link date text-body-2 type-tags">Jul 2025</a>
                                             </div>
-                                            <a href="https://ecompakistan.com/" class="btn-links">
+                                            <a href="https://thebiogreat.com" class="btn-links">
                                                 <i class="icon icon-arrow-top-right"></i>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="works-item scrolling-effect effectLeft">
-                                        <a class="image" href="asset/images/section/lamudi.png" data-lightbox="example-1">
-                                            <img class="lazyload" src="asset/images/section/works-3.jpg" data-src="asset/images/section/lamudi.png" alt="">
+                                        <a class="image" href="asset/images/section/raptrX.png" data-lightbox="example-1">
+                                            <img class="lazyload" src="asset/images/section/works-3.jpg" data-src="asset/images/section/raptrX.png" alt="">
                                         </a>
                                         <div class="content">
                                             <div class="infor">
-                                                <div class="sub-heading sub">WordPress Design, Real Estate Design</div>
+                                                <div class="sub-heading sub">Agency Website</div>
                                                 <h3 class="title">
-                                                    <a href="https://www.lamudi.pk/">lamudi.pk</a>
+                                                    <a href="https://www.raptrx.com">RaptrX</a>
                                                 </h3>
-                                                <a href="https://www.lamudi.pk/" class="link date text-body-2 type-tags">May 2024</a>
+                                                <a href="https://www.lamudi.pk/" class="link date text-body-2 type-tags">Jul 2025</a>
                                             </div>
                                             <a href="#" class="btn-links">
                                                 <i class="icon icon-arrow-top-right"></i>
